uploads/compilations/stdin.txt

MyClass.java:21: error: reached end of file while parsing
llll
^
1 error
